# ossuary-risk

./: .containerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Containerfile  README.md  compose.yaml  dashboard.py  dashboard_utils.py  pyproject.toml  scorecard_comparison.json  validation_results.json
.github/actions/ossuary-scan/: action.yml
.github/workflows/: ossuary-scan.yml
docs/: data_reuse_design.md  methodology.md  opensuse.md  validation.md
examples/: express_scan.json  ha_scan.json
pages/: 1_Ecosystems.py  2_Package.py  3_Score.py  4_Methodology.py
scripts/: ablation.py  cache_benchmark.py  dedupe_pypi_packages.py  discover_suse.py  lfx_probe.py  migrate_provisional_column.py  migrate_scores_nullable.py  scorecard_compare.py  sweep_maturity.py  t1_comparison.py  validate.py
seeds/: cargo-popular.yaml  data-science-ml.yaml  express-tree.yaml  kubernetes-stack.yaml  ml-towers.yaml  npm-popular.yaml  pypi-popular.yaml  suse-base.yaml  web-frameworks.yaml
spec/: agent-contract.md  prompt.md
src/ossuary/: __init__.py  __main__.py  _compat.py  cli.py
src/ossuary/api/: __init__.py  main.py
src/ossuary/collectors/: __init__.py  base.py  git.py  github.py  (+3 more)
tests/: __init__.py  test_ablation_dedup.py  test_annex_vii.py  test_batch_repo_aware.py  test_cache_normalization.py  test_cargo_homepage_fallback.py  test_dashboard_api.py  test_dashboard_ecosystems_actions.py  test_dep_tree.py  test_deps.py  test_diff.py  test_doc_code_drift.py  test_factors.py  test_github_collector.py  test_incomplete_data.py  test_provisional_state.py  test_pypi_collector.py  test_registry_collectors.py  test_repo_cache.py  test_reputation.py  test_sbom.py  test_sbom_spdx_conformance.py  test_sbom_spdx_interop.py  test_scoring.py  test_sentiment.py  test_support_period.py  test_tower.py  test_v090_migration.py
tests/fixtures/: sentiment_corpus.jsonl
thesis/: analyze_scopes.py
(+24 files in other folders)
