[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossuary-risk"
version = "0.1.1"
description = "OSS Supply Chain Risk Scoring - Where abandoned packages come to rest"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Anicka" }
]
keywords = ["security", "supply-chain", "oss", "risk", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "gitpython>=3.1.0",
    "textblob>=0.18.0",
    "vaderSentiment>=3.3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.scripts]
ossuary = "ossuary.cli:app"

[project.urls]
Homepage = "https://github.com/anicka-net/ossuary-risk"
Repository = "https://github.com/anicka-net/ossuary-risk"
Documentation = "https://github.com/anicka-net/ossuary-risk/blob/main/docs/methodology.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ossuary"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
